--- a/extension.toml
+++ b/extension.toml
@@ -4,7 +4,7 @@ description = "Scheme support."
 version = "0.0.3"
 schema_version = 1
 authors = ["Mikayla Maki <mikayla@zed.dev>"]
-repository = "https://github.com/zed-industries/zed"
+repository = "https://github.com/zed-extensions/scheme"
 
 [grammars.scheme]
 repository = "https://github.com/6cdh/tree-sitter-scheme"
